Fixed text getting cut off

--- a/src/components/Greetings/Greetings.module.css
+++ b/src/components/Greetings/Greetings.module.css
@@ -2,5 +2,6 @@
     font-size: 3.2em;
     line-height: 1.1;
     color: hsla(0, 0%, 100%, 0.555);
-    overflow: show;
+    overflow: visible;
+    white-space: nowrap;
 }
